tests/__snapshots__/validation-template-test-text-syntax-errors-stderr.snap.txt
Error: Expression expected. ts(1109)

  4 | 
  5 | test("is syntax error?", () => {
  6 |   one(());
    |        ~
  7 | });
  8 | 
  9 | test("is syntax error?", () => {

      at ./__typetests__/test-text-syntax-errors.tst.ts:6:8

Error: Argument expression expected. ts(1135)

   9 | test("is syntax error?", () => {
  10 |   one(
  11 | });
     | ~
  12 | 
  13 | test("is skipped?", () => {
  14 |   expect(one("abc")).type.toBe<void>();

       at ./__typetests__/test-text-syntax-errors.tst.ts:11:1

Error: ')' expected. ts(1005)

  16 | 
  17 | test("is broken?"
  18 | 
     | ~

       at ./__typetests__/test-text-syntax-errors.tst.ts:18:1

